# gesture_recognition

./: .gitignore  GUI_body.py  GUI_face.py  GUI_hand.py  README.md  pyproject.toml  requirements.txt  run_gui.py
body/: __init__.py  body_gui.py  body_mlp.py  body_recognition.py
core/: __init__.py  base_mlp.py  temporal_smoother.py  utils.py
example/: README.md  body_webcam.py  face_webcam.py  hand_image.py  hand_webcam.py
face/: __init__.py  face_gui.py  face_mlp.py  face_recognition.py
hand/: hand_gui.py  hand_mlp.py  hand_recognition.py
src/gesture_recognition/: __init__.py
src/gesture_recognition/body/: body_gui.py  body_mlp.py  body_recognition.py
src/gesture_recognition/core/: base_mlp.py  utils.py
src/gesture_recognition/face/: face_gui.py  face_mlp.py  face_recognition.py
src/gesture_recognition/hand/: __init__.py  hand_gui.py  hand_mlp.py  hand_recognition.py
